[EXE-1630] Pushdown aiq_day_start for Spark3 (#8)